--- a/pepeizqs deals web/Pages/Account/Register.cshtml
+++ b/pepeizqs deals web/Pages/Account/Register.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
 
-@model RegisterModel
+@model pepeizqs_deals_web.Pages.Account.RegisterModel
 
 @inject SignInManager<Usuario> SignInManager
 
