--- a/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
@@ -33,7 +33,7 @@
 
 	foreach (string keyword in keywordsLista)
 	{
-		if (keyword.Length > 3)
+		if (keyword.Length > 3 && keywords.Contains(keyword) == false)
 		{
 			keywords = keywords + ", " + keyword;
 		}
