--- a/pepeizqs deals web/Pages/Componentes/Secciones/Api.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Api.razor
@@ -6,6 +6,20 @@
 	string enlace = "https://pepeizqdeals.com/api";
 	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
+	string[] keywordsEnBruto = Herramientas.Buscador.LimpiarNombre(descripcion, false).Split(' ');
+	List<string> keywordsLista = new List<string>();
+	keywordsLista.AddRange(keywordsEnBruto);
+
+	string keywords = "api";
+
+	foreach (string keyword in keywordsLista)
+	{
+		if (keyword.Length > 3 && keywords.Contains(keyword) == false)
+		{
+			keywords = keywords + ", " + keyword;
+		}
+	}
+
 	<HeadContent>
 		<meta name="og:title" Content="@titulo" />
 		<meta name="description" content="@descripcion" />
@@ -15,7 +29,7 @@
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
 		<meta name="robots" content="index, follow" />
-		<meta name="keywords" content="api, programming, source code" />
+		<meta name="keywords" content="@keywords" />
 
 		<link rel="canonical" href="@enlace" />
 	</HeadContent>
